<resources>
    <string name="app_name">SmallDemo</string>
    <string name="insert_here">Insert Here</string>
    <string name="send_message">Send Message</string>
    <string name="received_message">Received Message</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="add">Add</string>
    <string name="linear_horizontal">Linear Horizontal</string>
    <string name="linear_vertical">Linear Vertical</string>
    <string name="button_test">Button test</string>
    <string name="textview_test">TextView test</string>
    <string name="meaning_layout">Các view sẽ chồng lên nhau</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="content_provider">Content Provider</string>
    <string name="show">Show</string>
    <string name="fragment">Fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="add_first_fragment">Add First Fragment</string>
    <string name="add_second_fragment">Add Second Fragment</string>
    <string name="send_data">Send Data</string>
    <string name="event_handling">Event Handling</string>
    <string name="up_size">Up Size</string>
    <string name="down_size">Down Size</string>
    <string name="test_size">Test Size</string>
    <string name="long_click">Long Click</string>
    <string name="on_touch">On Touch</string>
    <string name="notification">Notification</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="send_notification">Send Notification</string>
    <string name="received_title">Received Title</string>
    <string name="received_content">Received Content</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="save_data">Save Data</string>
    <string name="read_data">Read Data</string>
    <string name="demo_send_data">Demo Send Data</string>
    <string name="start_activity_without_destroy">Start Activity Without Destroy</string>
    <string name="start_activity_destroy">Start Activity Destroy</string>
    <string name="tab_first">Tab First</string>
    <string name="tab_second">Tab Second</string>
    <string name="demo_view_model">Demo ViewModel</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="count_number">0</string>
</resources>
