<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_layout.RelativeLayoutActivity">

    <TextView
        android:id="@+id/tvSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/send_message"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/add"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tvReceivedMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/received_message"
        android:textSize="30sp"
        android:layout_below="@id/tvSendMessage"
        android:layout_toEndOf="@id/tvSendMessage"/>
</RelativeLayout>