<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/actMain_etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_here"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/actMain_tvSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/send_message"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/actMain_etText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/actMain_tvStarService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/start_service"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/actMain_tvSendMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/actMain_tvStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/stop_service"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/actMain_tvStarService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/actMain_etNumberA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_here"
        app:layout_constraintTop_toBottomOf="@id/actMain_tvStopService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/actMain_etNumberB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_here"
        app:layout_constraintTop_toBottomOf="@id/actMain_etNumberA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/actMain_tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/add"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/actMain_etNumberB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>