<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_layout.LinearLayoutActivity">

    <LinearLayout
        android:id="@+id/linearLayoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTestHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/linear_horizontal"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnTestHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_test" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOne">

        <TextView
            android:id="@+id/tvTestVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/linear_vertical"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnTestVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_test" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>